# unseenadvantage

./: .gitignore  CONTRIBUTORS.md  Dockerfile  LICENSE_EULA.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security.md
.github/workflows/: ci.yml
examples/finance_demo/: events.csv  prices.csv
scripts/: api_smoke.py  run_demo.py
src/unseen_advantage/: cli.py  config.py
src/unseen_advantage/api/: server.py
src/unseen_advantage/finance/: parsers.py
src/unseen_advantage/lncp/: energy.py  flow.py  npe.py  weak_signals.py
src/unseen_advantage/scoring/: info_gain.py
src/unseen_advantage/ui/: routes.py  security.py  service.py
src/unseen_advantage/ui/templates/: base.html  home.html
src/unseen_advantage/ui/templates/partials/: civi_tile.html  lncp_table.html  tcd_table.html
src/unseen_advantage/utils/: embedding.py
tests/: test_civi.py  test_lncp.py  test_tcd.py
