[project]
name = "unseen-advantage"
version = "0.1.0"
description = "Unseen Advantage — LNCP (emergence), TCD (decay), CIVI (fragility)."
authors = [{name = "The World's Data Company"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "numpy>=1.24",
    "pandas>=2.2",
    "typer>=0.12",
]

[project.optional-dependencies]
ui = ["jinja2>=3.1", "python-multipart>=0.0.9", "itsdangerous>=2.2"]
dev = ["pytest>=7.4", "requests>=2.31", "matplotlib>=3.8"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
